# zksnap-circuits-halo2

./: .gitignore  Cargo.toml  FUNDING.json  README.md
aggregator/: Cargo.toml
aggregator/benches/: state_transition_circuit.rs  wrapper_circuit.rs
aggregator/src/: lib.rs  state_transition.rs  utils.rs  wrapper.rs
benches/: state_transition_circuit.rs  voter_circuit.rs  wrapper_circuit.rs
params/: kzg_bn254_9.srs
scripts/: build-js.sh  build-web.sh  build.sh
src/: chips.rs  circuits.rs  lib.rs  utils.rs
src/aggregator/: base_circuit.rs  mod.rs  recursion.rs  utils.rs  verifier.rs
src/chips/: merkle_tree_chip.rs
src/chips/poseidon/: hash_with_instance.rs  mod.rs  spec.rs
src/circuits/: ecdsa_circuit.rs  merkle_tree_circuit.rs
src/merkletree/: mod.rs  native.rs  utils.rs
src/sha256/: mod.rs
src/state_tran/: mod.rs
src/state_transition_circuit/: mod.rs  utils.rs
src/voter/: mod.rs
src/voter_circuit/: mod.rs  pse.rs  utils.rs
src/wrapper_circuit/: mod.rs  square.rs  utils.rs
voter/: Cargo.toml
voter/benches/: voter_circuit.rs
voter/frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
voter/frontend/app/: page.js  worker.js
voter/frontend/wasm/: Cargo.toml
voter/frontend/wasm/src/: lib.rs
voter/src/: lib.rs  utils.rs
voter/src/merkletree/: mod.rs  native.rs
voter_tests/: Cargo.toml
voter_tests/src/: lib.rs
wasm/: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
wasm/src/: lib.rs
