[package]
name = "voter-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.87"
rayon = "1.8"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-rayon = { version = "=1.1.3" }

halo2-base = { version = "0.4.1", features = ["halo2-axiom"] }

halo2-ecc = { version = "0.4.1", default-features = false, features = ["halo2-axiom"] }

snark-verifier-sdk = { version = "0.1.7", default-features = false, features = ["loader_halo2", "halo2-axiom"] }
snark-verifier = { version = "0.1.7", default-features = false, features = ["loader_halo2", "halo2-axiom"] }

halo2-wasm = { git = "https://github.com/axiom-crypto/halo2-browser.git", default-features = false}
paillier-chip = { git = "https://github.com/aerius-labs/paillier-halo2.git", branch = "feat/pallier-add" }
pse-poseidon = { git = "https://github.com/aerius-labs/pse-poseidon.git", branch = "feat/stateless-hash" }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1.45"
paste = "1.0.14"
poseidon-rs = "0.0.10"
rand = "0.8.5"
serde = "1.0.193"
bigint = "4.4.3"
rand_core = "0.6.4"

[target.wasm32-unknown-unknown.dependencies]
jemalloc-sys = "0.5.3"
