[package]
name = "zksnap-halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biguint-halo2 = { git = "https://github.com/aerius-labs/biguint-halo2" }
paillier-chip = { git = "https://github.com/aerius-labs/paillier-halo2.git" }
indexed-merkle-tree-halo2 = { git = "https://github.com/aerius-labs/indexed-merkle-tree-halo2.git" , branch = "feat/aggr-indexed" }
pse-poseidon = { git = "https://github.com/aerius-labs/pse-poseidon.git", branch = "feat/stateless-hash" }
halo2-base = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve", default-features = false, features = ["halo2-axiom", "display"] }
halo2-ecc = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve", default-features = false, features = ["halo2-axiom"] }
plume-halo2 = { git = "https://github.com/shreyas-londhe/zk-nullifier-sig.git", rev = "2e8c8c9" }
ark-std = "0.4.0"
getset = "0.1.2"
itertools = "0.12.0"
poseidon-rs = "0.0.10"
num-traits = "0.2.17"
rand = "0.8.5"
serde ="1.0.196"
num-bigint = { version = "0.4.4", features = ["serde"] }
rand_chacha = "0.3.1"
sha2 = "0.10.8"
k256 = { version = "0.13.3", features = ["arithmetic", "hash2curve", "expose-field", "sha2"]}
elliptic-curve = "0.13.8"

snark-verifier-sdk = { git = "https://github.com/aerius-labs/snark-verifier.git", branch = "feat/custom" }
serde_json = "1.0.114"

pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
criterion = "0.5.1"
criterion-macro = "0.4"

[[bench]]
name = "voter_circuit"
harness = false

[[bench]]
name = "state_transition_circuit"
harness = false

[[bench]]
name = "wrapper_circuit"
harness = false

# For performance profiling
[profile.flamegraph]
inherits = "release"
debug = true