[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2-base = { git = "https://github.com/aerius-labs/halo2-lib.git", branch = "feat/secp256k1-hash2curve", default-features = false, features = ["halo2-axiom", "display"] }
halo2-ecc = { git = "https://github.com/aerius-labs/halo2-lib.git", branch = "feat/secp256k1-hash2curve", default-features = false, features = ["halo2-axiom"] }
itertools = "0.12.0"
num-bigint = { version = "0.4.4", features = ["serde"] }
biguint-halo2 = { git = "https://github.com/aerius-labs/biguint-halo2" }
paillier-chip = { git = "https://github.com/aerius-labs/paillier-halo2.git" }
plume-halo2 = { git = "https://github.com/aerius-labs/zk-nullifier-sig.git", branch = "feat/plume-halo2" }
serde ="1.0.196"
k256 = { version = "0.13.3", features = ["arithmetic", "hash2curve", "expose-field", "sha2"]}
pse-poseidon = { git = "https://github.com/aerius-labs/pse-poseidon.git", branch = "feat/stateless-hash" }
rand = "0.8.5"
sha2 = "0.10.8"
indexed-merkle-tree-halo2 = { git = "https://github.com/aerius-labs/indexed-merkle-tree-halo2.git" , branch = "fix/imt" }
rand_chacha = "0.3.1"
snark-verifier-sdk = { git = "https://github.com/aerius-labs/snark-verifier.git", branch = "feat/custom" }
ark-std = "0.4.0"
num-traits = "0.2.18"

voter = { path = "../voter" }
voter-tests = { path = "../voter_tests" }

[dev-dependencies]
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
criterion = "0.5.1"
criterion-macro = "0.4"

[[bench]]
name = "state_transition_circuit"
harness = false

[[bench]]
name = "wrapper_circuit"
harness = false